@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-29T08:21:12Z",
-  "count_outdated" : 410,
-  "uniques_outdated" : 224,
-  "count" : 435,
-  "uniques" : 238,
+  "timestamp" : "2022-10-29T16:21:54Z",
+  "count_outdated" : 412,
+  "uniques_outdated" : 225,
+  "count" : 437,
+  "uniques" : 239,
   "clones" : [
-    {
-      "timestamp": "2022-10-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-16T00:00:00Z",
       "count": 2,
@@ -93,6 +86,13 @@
       "timestamp": "2022-10-28T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
