@@ -3,11 +3,6 @@
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2022-10-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-10-16T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -65,6 +60,11 @@
     {
       "timestamp": "2022-10-28T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-29T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
